<resources>
    <string name="app_name">TowerOffense</string>
    <string name="app_title">Tower Offense</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="play_online">Play Online</string>
    <string name="play_offline">Play Offline</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
